--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "bootstrap": "^5.2.3",
     "firebase": "^9.14.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.5",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
